<?xml version="1.0"?>
<package>
  <name>coms_commander</name>
  <version>0.1.0</version>
  <description>Package to control the COMS EV</description>

  <maintainer email="mizuno.naoki@rm.is.tohoku.ac.jp">Naoki Mizuno</maintainer>

  <license>MIT</license>

  <url type="website">http://github.com/naoki-mizuno/coms_commander</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>prius_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>prius_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <export>
  </export>
</package>
